# booms-gse

./: README.md  pyproject.toml
src/booms_gse/computer_gse/: __init__.py  __main__.py  mm_gse.py  network.py
src/booms_gse/computer_gse/cli/: __init__.py
src/booms_gse/instrument_gse/: __init__.py  imager.py  spectrometer.py
src/booms_gse/instrument_gse/cli/: __init__.py
